fix(yalb-1104): alignment fix - remove search input padding to fix chrome bug

--- a/components/03-organisms/menu/utility-nav/_yds-utility-nav.scss
+++ b/components/03-organisms/menu/utility-nav/_yds-utility-nav.scss
@@ -67,7 +67,8 @@
     border: none;
     color: inherit;
     min-height: var(--size-click-target-minimum);
-    width: 7.25rem;
+    width: 7rem;
+    padding: 0;
 
     &::placeholder {
       color: inherit;
